--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
                           edit_user_registration_path, title: 'Edit Profile' %>
             </li>
 
-            <li class="col-md-1"> </li>
+            <li class="col-md-1">&nbsp;</li>
 
             <li class="col-md-3 logout"><%= link_to('Logout', destroy_user_session_path,
                                         class: 'btn btn-xs btn-danger', title: 'Logout', :method => :delete) %></li>
