--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -62,3 +62,11 @@
 .btn-primary:visited, .btn-danger:visited {
   color: #fff;
 }
+
+
+// Homepage
+
+.jumbotron {
+  background-image: url('https://images.pexels.com/photos/226243/pexels-photo-226243.jpeg?auto=compress&cs=tinysrgb&h=650&w=940');
+  background-size: cover;
+}
