--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Welcome to the photo app</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1 class="text-center">Welcome to the photo app</h1>
+
+<br>
+
+<div class="container">
+  <div class="jumbotron">
+    <h1>Bootstrap Tutorial</h1>
+    <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
+  </div>
+</div>
